--- a/app/new-items.html
+++ b/app/new-items.html
@@ -262,7 +262,13 @@
                         </aside>
                         <div class="product-page__content">
                             <div class="product-page__filter">
-
+                                <div class="product-page__filter-sort">
+                                    <button class="icon-sort-amount-desc"></button>Sort by: New Items<button class="icon-unsorted"></button>
+                                </div>
+                                <div class="div">
+                                    <button class="icon-th-large active"></button>
+                                    <button class="icon-th-list"></button>
+                                </div>
                             </div>
                             <div class="product-page__items">
 
@@ -272,11 +278,112 @@
                                     <div class="product__item-content">
                                         <div class="product__item-name">
                                             <a class="product__item-title" href="#">
-                                                Responsive Mobile APP
+                                                Продуктовый элемент на странице
                                             </a>
                                             <a class="product__item-category" href="#">
                                                 Site Template
                                             </a>
+                                            <div class="product__item-text">
+                                                Pimply dummy text of the printing and typesetting industry.
+                                            </div>
+                                        </div>
+                                        <div class="product__item-price">
+                                            $19
+                                            <span>Sales ( 14 )</span>
+                                        </div>
+                                    </div>
+                                    <div class="product__item-info">
+                                        <a class="product__item-autor" href="#">
+                                            <div class="avatar" style="background-image: url(images/content/user.jpg);">
+                                            </div>
+                                            <span>Radiustheme</span>
+                                        </a>
+                                        <div class="product__item-star">
+                                            <div class="rate-star"></div>(<span>05</span>)                                            
+                                        </div>
+                                        <div class="product__item-list">
+                                            <a class="icon-comment-o" href="#">(<span>10</span>)</a>
+                                            <div class="icon-heart-o">(<span>20</span>)</div>
+                                        </div>
+                                    </div>
+                                </div>
+
+                                <div class="product__item">
+                                    <a class="product__item-img" href="#"
+                                        style="background-image: url(images/content/product-item.jpg);"></a>
+                                    <div class="product__item-content">
+                                        <div class="product__item-name">
+                                            <a class="product__item-title" href="#">
+                                                Продуктовый элемент на странице
+                                            </a>
+                                            <a class="product__item-category" href="#">
+                                                Site Template
+                                            </a>
+                                            <div class="product__item-text">
+                                                Pimply dummy text of the printing and typesetting industry.
+                                            </div>
+                                        </div>
+                                        <div class="product__item-price">
+                                            $19
+                                        </div>
+                                    </div>
+                                    <div class="product__item-info">
+                                        <a class="product__item-autor" href="#">
+                                            <div class="avatar" style="background-image: url(images/content/user.jpg);">
+                                            </div>
+                                            <span>Radiustheme</span>
+                                        </a>
+                                        <div class="product__item-star">
+                                            <div class="rate-star"></div>(<span>05</span>)
+                                        </div>
+                                    </div>
+                                </div>
+
+                                <div class="product__item">
+                                    <a class="product__item-img" href="#"
+                                        style="background-image: url(images/content/product-item__telegram.jpg);"></a>
+                                    <div class="product__item-content">
+                                        <div class="product__item-name">
+                                            <a class="product__item-title" href="#">
+                                                Продуктовый элемент на странице
+                                            </a>
+                                            <a class="product__item-category" href="#">
+                                                Site Template
+                                            </a>
+                                            <div class="product__item-text">
+                                                Pimply dummy text of the printing and typesetting industry.
+                                            </div>
+                                        </div>
+                                        <div class="product__item-price">
+                                            $19
+                                        </div>
+                                    </div>
+                                    <div class="product__item-info">
+                                        <a class="product__item-autor" href="#">
+                                            <div class="avatar" style="background-image: url(images/content/user.jpg);">
+                                            </div>
+                                            <span>Radiustheme</span>
+                                        </a>
+                                        <div class="product__item-star">
+                                            <div class="rate-star"></div>(<span>05</span>)
+                                        </div>
+                                    </div>
+                                </div>
+
+                                <div class="product__item">
+                                    <a class="product__item-img" href="#"
+                                        style="background-image: url(images/content/product-item__telegram.jpg);"></a>
+                                    <div class="product__item-content">
+                                        <div class="product__item-name">
+                                            <a class="product__item-title" href="#">
+                                                Продуктовый элемент на странице
+                                            </a>
+                                            <a class="product__item-category" href="#">
+                                                Site Template
+                                            </a>
+                                            <div class="product__item-text">
+                                                Pimply dummy text of the printing and typesetting industry.
+                                            </div>
                                         </div>
                                         <div class="product__item-price">
                                             $19
@@ -300,11 +407,14 @@
                                     <div class="product__item-content">
                                         <div class="product__item-name">
                                             <a class="product__item-title" href="#">
-                                                Responsive Mobile APP
+                                                Продуктовый элемент на странице
                                             </a>
                                             <a class="product__item-category" href="#">
                                                 Site Template
                                             </a>
+                                            <div class="product__item-text">
+                                                Pimply dummy text of the printing and typesetting industry.
+                                            </div>
                                         </div>
                                         <div class="product__item-price">
                                             $19
@@ -328,11 +438,14 @@
                                     <div class="product__item-content">
                                         <div class="product__item-name">
                                             <a class="product__item-title" href="#">
-                                                Responsive Mobile APP
+                                                Продуктовый элемент на странице
                                             </a>
                                             <a class="product__item-category" href="#">
                                                 Site Template
                                             </a>
+                                            <div class="product__item-text">
+                                                Pimply dummy text of the printing and typesetting industry.
+                                            </div>
                                         </div>
                                         <div class="product__item-price">
                                             $19
@@ -348,13 +461,13 @@
                                             <div class="rate-star"></div>(<span>05</span>)
                                         </div>
                                     </div>
-                                </div>
+                                </div>                        
 
                             </div>
 
                             <div class="pagination">
                                 <ul class="pagination__list">
-                                    <li><a class="active" href="#">1</a></li>
+                                    <li><span class="active" href="#">1</span></li>
                                     <li><a href="#">2</a></li>
                                     <li><a href="#">3</a></li>
                                     <li><a href="#">4</a></li>
