--- a/app/product-one.html
+++ b/app/product-one.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@500;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;500;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/libs.min.css">
     <link rel="stylesheet" href="css/style.min.css">
@@ -492,92 +492,166 @@
                             </div>
                         </div>
                         <div class="product-one__aside">
-
-                        </div>
-                    </div>
-                </div>
-            </section>
-
-
-
-
-
-        </div>
-        <footer class="footer">
-            <div class="footer__content">
-                <div class="container">
-                    <div class="footer__inner">
-                        <div class="footer__col footer__col-adress">
-                            <div class="footer__col-title">
-                                About Company
-                            </div>
-                            <div class="footer__col-text">
-                                Praesent vel rutrum purus. Nam vel dui eu risus duis dignissim digniSuspen disse.Fusce
-                                sit
-                                amet urna iat.Praesent vel rutrum purus.
-                            </div>
-                            <div class="footer__info">PO Box 16122 Collins Street West
-                                Victoria 8007 Australia
-                            </div>
-                            <a class="footer__info footer__info-phone" href="tel:61383766284">+61 3 8376 6284</a>
-                        </div>
-                        <div class="footer__col footer__col-menu">
-                            <div class="footer__col-title">
-                                Join Our Community
-                            </div>
-                            <ul class="footer__col-list">
-                                <li><a href="#">Home</a></li>
-                                <li><a href="#">Forums</a></li>
-                                <li><a href="#">Become an Author</a></li>
-                                <li><a href="#">Community Meetups</a></li>
-                                <li><a href="#">Become an Affiliate</a></li>
-                            </ul>
-                        </div>
-                        <div class="footer__col footer__col-menu">
-                            <div class="footer__col-title">
-                                Need Help?
-                            </div>
-                            <ul class="footer__col-list">
-                                <li><a href="#">Help Center</a></li>
-                                <li><a href="#">Foxtar Market Terms</a></li>
-                                <li><a href="#">Author Terms</a></li>
-                                <li><a href="#">Foxtar Licenses</a></li>
-                                <li><a href="#">Contact Us</a></li>
-                            </ul>
-                        </div>
-                        <div class="footer__col footer__col-social">
-                            <div class="footer__col-title">
-                                Follow Us On
-                            </div>
-                            <ul class="footer__social-link">
-                                <li><a class="link-facebook" href="#"></a></li>
-                                <li><a class="link-twitter" href="#"></a></li>
-                                <li><a class="link-youtobe" href="#"></a></li>
-                                <li><a class="link-pinterest" href="#"></a></li>
-                                <li><a class="link-linkLedin" href="#"></a></li>
-                            </ul>
-                            <div class="footer__form">
-                                <div class="footer__form-title">
-                                    Newsletter Sign Up!
+                            <div class="aside__item product__price">
+                                <div class="aside__title">
+                                    Product Price
                                 </div>
-                                <form>
-                                    <input type="text" placeholder="E-mail Address">
-                                    <button type="submit"></button>
-                                </form>
+                                <div class="price__box">
+                                    <div class="price__product">
+                                        $59.00
+                                    </div>
+                                    <form>
+                                        <select>
+                                            <option>regular</option>
+                                            <option>premium</option>
+                                        </select>
+                                    </form>
+                                </div>
+                                <button class="icon-shopping-cart">Add To Cart</button>
+                                <button class="icon-heart-o">Add To Favourites</button>
+                                <button>Buy Now</button>
                             </div>
+                            <div class="aside__item">
+                                <div class="aside__title">
+                                    Product Author
+                                </div>
+                                <div class="product-author__box">
+                                    <div class="author__avatar">
+                                        <img src="images/content/avatar.jpg" alt="">
+                                    </div>
+                                    <div class="author__info">
+                                        <div class="author__name">
+                                            PsdBoss
+                                        </div>
+                                        <a href="#" class="author__info-link">
+                                            View Profile
+                                        </a>
+                                    </div>
+
+                                </div>
+                                <ul class="author__awards-list">
+                                    <li class="icon-meh-o"></li>
+                                    <li class="icon-pagelines"></li>
+                                    <li class="icon-flash"></li>
+                                    <li class="icon-foursquare"></li>
+                                    <li class="icon-yen"></li>
+                                </ul>
+                            </div>
+                            <div class="aside__item sales-namber">
+                                <div class="aside__item-sales">
+                                    <span>05</span> Sales
+                                </div>
+                            </div>
+                            <div class="aside__item">
+                                <div class="aside__title">
+                                    Product Information
+                                </div>
+                                <div class="information__line">
+                                    <span>Released On:</span> 1 January, 2016
+                                </div>
+                                <div class="information__line">
+                                    <span>Last Update:</span> 20 April, 2016
+                                </div>
+                                <div class="information__line">
+                                    <span>Download:</span> 613
+                                </div>
+                                <div class="information__line">
+                                    <span>Version:</span> 1.1
+                                </div>
+                                <div class="information__line">
+                                    <span>Compatibility:</span> Wordpress 4+
+                                </div>
+                                <div class="information__line">
+                                    <span>Compatible Browsers:</span> IE9, IE10, IE11, Firefox, Safari, Opera, Chrome
+                                </div>
+                            </div>
+                        </div>
+
+                    </div>
+                </div>
+        </div>
+        </section>
+
+
+
+
+
+    </div>
+    <footer class="footer">
+        <div class="footer__content">
+            <div class="container">
+                <div class="footer__inner">
+                    <div class="footer__col footer__col-adress">
+                        <div class="footer__col-title">
+                            About Company
+                        </div>
+                        <div class="footer__col-text">
+                            Praesent vel rutrum purus. Nam vel dui eu risus duis dignissim digniSuspen disse.Fusce
+                            sit
+                            amet urna iat.Praesent vel rutrum purus.
+                        </div>
+                        <div class="footer__info">PO Box 16122 Collins Street West
+                            Victoria 8007 Australia
+                        </div>
+                        <a class="footer__info footer__info-phone" href="tel:61383766284">+61 3 8376 6284</a>
+                    </div>
+                    <div class="footer__col footer__col-menu">
+                        <div class="footer__col-title">
+                            Join Our Community
+                        </div>
+                        <ul class="footer__col-list">
+                            <li><a href="#">Home</a></li>
+                            <li><a href="#">Forums</a></li>
+                            <li><a href="#">Become an Author</a></li>
+                            <li><a href="#">Community Meetups</a></li>
+                            <li><a href="#">Become an Affiliate</a></li>
+                        </ul>
+                    </div>
+                    <div class="footer__col footer__col-menu">
+                        <div class="footer__col-title">
+                            Need Help?
+                        </div>
+                        <ul class="footer__col-list">
+                            <li><a href="#">Help Center</a></li>
+                            <li><a href="#">Foxtar Market Terms</a></li>
+                            <li><a href="#">Author Terms</a></li>
+                            <li><a href="#">Foxtar Licenses</a></li>
+                            <li><a href="#">Contact Us</a></li>
+                        </ul>
+                    </div>
+                    <div class="footer__col footer__col-social">
+                        <div class="footer__col-title">
+                            Follow Us On
+                        </div>
+                        <ul class="footer__social-link">
+                            <li><a class="link-facebook" href="#"></a></li>
+                            <li><a class="link-twitter" href="#"></a></li>
+                            <li><a class="link-youtobe" href="#"></a></li>
+                            <li><a class="link-pinterest" href="#"></a></li>
+                            <li><a class="link-linkLedin" href="#"></a></li>
+                        </ul>
+                        <div class="footer__form">
+                            <div class="footer__form-title">
+                                Newsletter Sign Up!
+                            </div>
+                            <form>
+                                <input type="text" placeholder="E-mail Address">
+                                <button type="submit"></button>
+                            </form>
                         </div>
                     </div>
                 </div>
             </div>
+        </div>
 
-            <div class="footer__copy">
-                <div class="container">
-                    <div class="footer__copy-text">
-                        © 2017 Foxtar market place. Trademarks and brands are the property of their respective owners.
-                    </div>
+        <div class="footer__copy">
+            <div class="container">
+                <div class="footer__copy-text">
+                    © 2017 Foxtar market place. Trademarks and brands are the property of their respective owners.
                 </div>
             </div>
-        </footer>
+        </div>
+    </footer>
     </div>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
