--- a/app/index.html
+++ b/app/index.html
@@ -210,7 +210,8 @@
                                         </ul>
                                     </div>
                                 </div>
-                                <a class="header__btn header__btn-login header__btn-login--on" href="#">Login</a>
+                                <a class="header__btn header__btn-login header__btn-login--on" data-fancybox
+                                    data-src="#modal" href="javascript:;">Login</a>
                                 <a class="header__btn header__btn-logout header__btn-login--off" href="#">Logout</a>
                                 <a class="header__btn header__btn-register header__btn-login--on" href="#">Register</a>
                             </div>
@@ -1199,6 +1200,25 @@
                 </div>
             </div>
         </footer>
+    </div>
+
+    <div id="modal">
+        <div class="login__wrapper">
+            <div class="login__title">
+                Login
+            </div>
+            <form>
+                <label class="login__label-name">
+                    <input type="text" placeholder="Name" required>
+                </label>
+                <label class="login__label-pass">
+                    <input type="password" placeholder="Password" required>
+                </label>
+                <button type="submit">submit</button>
+                <a class="creat-acc" href="#">Creat An Account?</a>
+                <a class="lost-pass" href="#">Lost Password?</a>
+            </form>
+        </div>
     </div>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
