--- a/app/settings.html
+++ b/app/settings.html
@@ -312,7 +312,7 @@
                 </div>
             </div>
 
-            <div class="settings">
+            <section class="settings">
                 <div class="container">
                     <div class="product-one__tabs settings__tabs">
 
@@ -738,7 +738,7 @@
 
                     </div>
                 </div>
-            </div>
+            </section>
 
 
 
