added upload page

--- a/app/settings.html
+++ b/app/settings.html
@@ -726,10 +726,9 @@
                                             </div>
 
                                             <div class="settings__line-btn">
-                                                <button>Update</button>
+                                                <button  type="submit">Update</button>
                                             </div>
                                         
-
                                         </form>
                                     </div>
                                 </div>
