--- a/app/withdrawals.html
+++ b/app/withdrawals.html
@@ -7,7 +7,6 @@
     <title>Document</title>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;500;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/libs.min.css">
     <link rel="stylesheet" href="css/style.min.css">
 </head>
@@ -307,74 +306,115 @@
                     <div class="breadcrumbs__inner">
                         <ul class="breadcrumbs__list">
                             <li><a href="#">Home</a></li>
-                            <li><span>Contact US</span></li>
+                            <li><span>Withdrawals</span></li>
                         </ul>
                     </div>
                 </div>
             </div>
 
-            <section class="contact">
+            <section class="withdrawals">
                 <div class="container">
-                    <div class="contact__wrapper">
-                        <div class="contact__head">
-                            Contact With Us
-                        </div>
-                        <div class="contact__inner">
-                            <div class="contact__map">
-                                <iframe
-                                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d35909.59622832317!2d37.56996586164571!3d55.769796972739826!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46b54a38b8ba73b3%3A0x772b4921ab35de99!2z0KLQstC10YDRgdC60L7QuSDRgC3QvSwg0JzQvtGB0LrQstCw!5e0!3m2!1sru!2sru!4v1603190833613!5m2!1sru!2sru"
-                                    frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false"
-                                    tabindex="0"></iframe>
-                            </div>
-                            <div class="contact__box">
-                                <div class="contact__info">
-                                    <div class="contact__info-item">
-                                        <div class="contact__info-title icon-map-marker">
-                                            Our Office Address
-                                        </div>
-                                        <div class="contact__info-content">
-                                            PO Box 16122 Collins Street West
-                                            Victoria 8007 Australia
-                                        </div>
-                                    </div>
-
-                                    <div class="contact__info-item">
-                                        <div class="contact__info-title icon-phone">
-                                            Phone
-                                        </div>
-                                        <a href="tel:61383766284" class="contact__info-content">
-                                            +61 3 8376 6284
-                                        </a>
-                                    </div>
-
-                                    <div class="contact__info-item">
-                                        <div class="contact__info-title icon-envelope-o">
-                                            E-mail
-                                        </div>
-                                        <div class="contact__info-content">
-                                            info@foxtar.com
-                                        </div>
-                                    </div>
-
+                    <div class="withdrawals__inner">
+                        <div class="withdrawals__col">
+                            <div class="withdrawals__box">
+                                <div class="withdrawals__title">
+                                    Withdrawals Earningsv
                                 </div>
-                                <div class="contact__form">
-                                    <div class="contact__form-title">
-                                        Drop Us A Message 
-                                    </div>
+                                <div class="withdrawals__content">
                                     <form>
-                                        <div class="contact__form-row">
-                                            <input type="text" placeholder="Name*" required>
-                                            <input type="text" placeholder="E-mail*" required>
+                                        <div class="withdrawals__form-line">
+                                            <label>Amount to Withdraw ($2000.00 Maximum)<span>*</span></label>
+                                            <input type="text" placeholder="Enter the amount you want to withdraw..." required>
                                         </div>
-                                        <textarea placeholder="Message*" required></textarea>
-                                        <button type="submit">Send Message</button>
+                                        <div class="withdrawals__form-line">
+                                            <label>Choose your Withdraw Method<span>*</span></label>
+                                            <select>
+                                                <option>Select Your Card</option>
+                                                <option>Select Your Card</option>
+                                            </select>
+                                        </div>
+                                        <div class="withdrawals__form-line">
+                                            <label>Your Account Name<span>*</span></label>
+                                            <select>
+                                                <option>Select Your Card</option>
+                                                <option>Select Your Card</option>
+                                            </select>
+                                        </div>
+                                        <div class="withdrawals__form-line">
+                                            <label>Confirm Your Password<span>*</span></label>
+                                            <input type="text" placeholder="Select Your Card" required>
+                                        </div>
+                                        <button type="submit">Request Withdrawal</button>
                                     </form>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="withdrawals__col">
+                            <div class="withdrawals__box">
+                                <div class="withdrawals__title">
+                                    Withdrawal History
+                                </div>
+                                <div class="withdrawals__content">
+                                    <div class="withdrawals__content-items">
+
+                                        <div class="withdrawals__content-item">
+                                            <div class="withdrawals__content-date">Dec 26th, 2016</div>
+                                            <div class="withdrawals__content-email">Psdboss@paypal.com</div>
+                                            <div class="withdrawals__content-price">$200</div>
+                                            <div class="withdrawals__content-status withdrawals__content-status-pending">Pending</div>                                            
+                                        </div>
+
+                                        <div class="withdrawals__content-item">
+                                            <div class="withdrawals__content-date">Dec 26th, 2016</div>
+                                            <div class="withdrawals__content-email">Psdboss@paypal.com</div>
+                                            <div class="withdrawals__content-price">$200</div>
+                                            <div class="withdrawals__content-status withdrawals__content-status-paid">Paid</div>                                            
+                                        </div>
+
+                                        <div class="withdrawals__content-item">
+                                            <div class="withdrawals__content-date">Dec 26th, 2016</div>
+                                            <div class="withdrawals__content-email">Psdboss@paypal.com</div>
+                                            <div class="withdrawals__content-price">$200</div>
+                                            <div class="withdrawals__content-status withdrawals__content-status-paid">Paid</div>                                            
+                                        </div>
+
+                                        <div class="withdrawals__content-item">
+                                            <div class="withdrawals__content-date">Dec 26th, 2016</div>
+                                            <div class="withdrawals__content-email">Psdboss@paypal.com</div>
+                                            <div class="withdrawals__content-price">$200</div>
+                                            <div class="withdrawals__content-status withdrawals__content-status-pending">Pending</div>                                            
+                                        </div>
+
+                                        <div class="withdrawals__content-item">
+                                            <div class="withdrawals__content-date">Dec 26th, 2016</div>
+                                            <div class="withdrawals__content-email">Psdboss@paypal.com</div>
+                                            <div class="withdrawals__content-price">$200</div>
+                                            <div class="withdrawals__content-status withdrawals__content-status-pending">Pending</div>                                            
+                                        </div>
+
+                                        <div class="withdrawals__content-item">
+                                            <div class="withdrawals__content-date">Dec 26th, 2016</div>
+                                            <div class="withdrawals__content-email">Psdboss@paypal.com</div>
+                                            <div class="withdrawals__content-price">$200</div>
+                                            <div class="withdrawals__content-status withdrawals__content-status-pending">Pending</div>                                            
+                                        </div>
+
+                                        <div class="withdrawals__content-item">
+                                            <div class="withdrawals__content-date">Dec 26th, 2016</div>
+                                            <div class="withdrawals__content-email">Psdboss@paypal.com</div>
+                                            <div class="withdrawals__content-price">$200</div>
+                                            <div class="withdrawals__content-status withdrawals__content-status-pending">Pending</div>                                            
+                                        </div>
+                                        
+                                    </div>
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
             </section>
+
+
 
 
 
@@ -463,4 +503,4 @@
     <script src="js/main.js"></script>
 </body>
 
-</html> 
+</html>
