--- a/app/about.html
+++ b/app/about.html
@@ -230,52 +230,52 @@
                             </div>
                             <ul class="menu__list">
                                 <li>
-                                    <a href="#">
+                                    <a href="https://saturdayin.github.io/moderno/app/index.html">
                                         Home
                                     </a>
                                 </li>
                                 <li>
-                                    <a href="#">
+                                    <a href="https://saturdayin.github.io/moderno/app/about.html">
                                         About
                                     </a>
                                 </li>
                                 <li>
-                                    <a href="#">
+                                    <a href="https://saturdayin.github.io/moderno/app/404.html">
                                         WordPress
                                     </a>
                                 </li>
                                 <li>
-                                    <a href="#">
+                                    <a href="https://saturdayin.github.io/moderno/app/404.html">
                                         Joomla
                                     </a>
                                 </li>
                                 <li>
-                                    <a href="#">
+                                    <a href="https://saturdayin.github.io/moderno/app/404.html">
                                         PSD
                                     </a>
                                 </li>
                                 <li>
-                                    <a href="#">
+                                    <a href="https://saturdayin.github.io/moderno/app/404.html">
                                         Plugins
                                     </a>
                                 </li>
                                 <li>
-                                    <a href="#">
+                                    <a href="https://saturdayin.github.io/moderno/app/404.html">
                                         Components
                                     </a>
                                 </li>
                                 <li>
-                                    <a href="#">
+                                    <a href="https://saturdayin.github.io/moderno/app/page.html">
                                         Pages
                                     </a>
                                 </li>
                                 <li>
-                                    <a href="#">
+                                    <a href="https://saturdayin.github.io/moderno/app/contacts.html">
                                         Contact
                                     </a>
                                 </li>
                                 <li>
-                                    <a href="#">
+                                    <a href="https://saturdayin.github.io/moderno/app/404.html">
                                         Help
                                     </a>
                                 </li>
